syntax = "proto3";

option go_package = "proto/booking";

service BookingService {
  rpc GetAll(AM_GetAllBookingRequests_Request) returns (AM_GetAllBookingRequests_Response) {}
  rpc MakeBookingRequest(AM_BookingRequest_Request) returns (AM_CreateBookingRequest_Response) {}
}

message AM_GetAllBookingRequests_Request {}

message AM_GetAllBookingRequests_Response {
  repeated BookingRequestsDTO data = 1;
}

message AM_BookingRequest_Request {
  string accommodationId = 1;
  string startDate = 2;
  string endDate = 3;
  int32 numberOfGuests = 4;
  string userId = 5;
}

message AM_CreateBookingRequest_Response {
  string id = 1;
}

message BookingRequestsDTO {
  string id = 1;
  string accommodationId = 2;
  string startDate = 3;
  string endDate = 4;
  int32 numberOfGuests = 5;
  string userId = 6;
}